--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,24 @@
           "value": "noindex"
         }
       ]
+    },
+    {
+      "source": "/scripts/dark-mode.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
+        }
+      ]
+    }
+  ],
+  "buildCommand": "next build",
+  "outputDirectory": ".next",
+  "framework": "nextjs",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/$1"
     }
   ]
 }
